--- a/expense_tracker.kv
+++ b/expense_tracker.kv
@@ -34,7 +34,7 @@
                 on_press: root.add_expense(self)
 
         Label:
-            text: "Total Expenses: ${:.2f}".format(root.total_expenses)
+            text: "Total Expenses: ₹{:.2f}".format(root.total_expenses)
             size_hint_y: None
             height: 30
 
